Start first Speed > Up level Rework game over to not kill the game Remove "Press enter to start" on pause screen Remove deprecated method in pause method Remove print on level init showing which level is being started due to crashing